fix: Fix SignIn Link flickering in HeaderMenu

--- a/ui/layout/header/HeaderMenu.module.css
+++ b/ui/layout/header/HeaderMenu.module.css
@@ -19,3 +19,7 @@
     }
 }
 
+.itemHidden {
+    opacity: 0;
+    pointer-events: none;
+}
